--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
     Machine Learning Engineer &mdash; Industrial Time-Series &amp; Predictive Analytics
   </p>
   <p class="home-summary">
-    I build ML systems that make sense of noisy industrial sensor data and simulation outputs,
-    turning raw signals into reliable, decision-ready pipelines for maintenance, operations,
-    and real-world engineering challenges.
+    I design and build data-centric ML systems, working with large datasets, time-series signals,
+    and complex real-world problems. I enjoy turning messy data into clear, reliable pipelines that
+    support modeling, analytics, and intelligent automation.
   </p>
   <div class="home-actions">
     <a class="btn btn--primary" href="/projects/">View Projects</a>
@@ -236,249 +236,7 @@ Unsupervised ML &bull; Dimensionality reduction &bull; Mineral-processing analyt
 
 <h2 id="technical-focus">Technical Focus</h2>
 
-<div class="home-grid home-grid--three">
-
-<div class="home-card home-card--focus">
-<h3>Machine Learning &amp; Data</h3>
-<ul>
-  <li>Time-series modeling and anomaly detection</li>
-  <li>Predictive-maintenance workflows</li>
-  <li>Reliability feature engineering (deltas, ratios, transients)</li>
-  <li>Noise reduction, smoothing, reconstruction</li>
-  <li>Model evaluation and statistical validation</li>
-</ul>
-</div>
-
-<div class="home-card home-card--focus">
-<h3>Software Engineering</h3>
-<ul>
-  <li>Python, C++, SQL, JavaScript</li>
-  <li>Large-scale data wrangling and automation</li>
-  <li>Clean, reproducible workflow design</li>
-  <li>Jupyter, Git, Linux</li>
-</ul>
-</div>
-
-<div class="home-card home-card--focus">
-<h3>Domains</h3>
-<ul>
-  <li>Industrial sensor data (vibration, load, pressure, temperature)</li>
-  <li>Rail-simulation outputs and operational logs</li>
-  <li>Mining, reliability engineering, and heavy-industry analytics</li>
-</ul>
-</div>
-
-</div>
-
-<hr />
-
-<h2 id="selected-projects">Selected Projects</h2>
-
-<div class="home-grid home-grid--three">
-
-<div class="home-card home-card--project">
-<h3>Predictive Maintenance &mdash; Sensor Data Conditioning (2025)</h3>
-<p>
-Built end-to-end preprocessing workflows for 50k+ industrial time-series, implementing noise reduction, outlier
-handling, and signal reconstruction. Created reliability-focused feature sets for downstream ML failure prediction
-and maintenance analytics.
-</p>
-<p class="home-card-meta">
-<a href="/projects/">See more details →</a>
-</p>
-</div>
-
-<div class="home-card home-card--project">
-<h3>TrainOps Simulation Data Optimization (2024)</h3>
-<p>
-Developed C++ and Python tooling to structure 200k+ simulation records, cutting manual processing time by ~70%.
-Merged sensor data with rider-survey logs to validate scenario fidelity and improve planning insights.
-</p>
-<p class="home-card-meta">
-<a href="/projects/">See more details →</a>
-</p>
-</div>
-
-<div class="home-card home-card--project">
-<h3>ML Failure-Mode Prototyping (2024–2025)</h3>
-<p>
-Exploratory ML pipeline inspired by industrial maintenance settings, including EDA, feature engineering, and baseline
-models (Random Forest, SVM, Gradient Boosting) to detect early abnormal behavior in equipment.
-</p>
-<p class="home-card-meta">
-<a href="/projects/">See more details →</a>
-</p>
-</div>
-
-</div>
-
-<hr />
-
-<h2 id="contact">Contact</h2>
-
-<p>If you’d like to talk about internships, ML systems, or industrial data projects, you can reach me via:</p>
-
-<ul>
-  <li><strong>Email:</strong> gloayza5@byu.edu</li>
-  <li><strong>GitHub:</strong> <a href="https://github.com/Gonza2055" target="_blank" rel="noopener">Gonza2055</a></li>
-  <li><strong>LinkedIn:</strong> (add your LinkedIn URL)</li>
-</ul>
-
-<hr />
-
-<style>
-/* COLOR SYSTEM */
-:root {
-  --home-bg-band: #f8fafc;
-  --home-border: #e2e6f0;
-  --home-border-strong: #c5d0ea;
-  --home-text-main: #111827;
-  --home-text-muted: #6b7280;
-  --home-accent: #2563eb;
-  --home-accent-soft: rgba(37, 99, 235, 0.08);
-  --home-accent-green: #10b981;
-  --home-shadow-card: 0 8px 20px rgba(15, 23, 42, 0.05);
-  --home-radius-lg: 0.9rem;
-  --home-radius-md: 0.85rem;
-}
-
-/* Hide the automatic "Home" title that Minimal Mistakes prints */
-.page__title {
-  display: none;
-}
-
-/* SECTION SPACING */
-.page__content h2 {
-  margin-top: 2.5rem;
-  margin-bottom: 0.75rem;
-}
-
-/* HERO – nuevo diseño en banda completa, sin "tarjeta" */
-.home-hero {
-  text-align: center;
-  padding: 2.8rem 1.5rem 2.4rem;
-  margin: 0 -1.5rem 2.5rem -1.5rem; /* se extiende un poco para sentirlo como banda */
-  background: linear-gradient(180deg, #ffffff 0%, var(--home-bg-band) 100%);
-  border-bottom: 1px solid #e5e7eb;
-}
-
-.home-kicker {
-  text-transform: uppercase;
-  letter-spacing: 0.12em;
-  font-size: 0.8rem;
-  font-weight: 600;
-  color: var(--home-text-muted);
-  margin-bottom: 0.55rem;
-}
-
-.home-name {
-  font-size: 2.6rem;
-  margin: 0.1rem 0 0.35rem 0;
-  font-weight: 700;
-  color: var(--home-text-main);
-}
-
-/* tagline y summary comparten el mismo ancho visual */
-.home-tagline,
-.home-summary {
-  max-width: 720px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.home-tagline {
-  font-size: 1.05rem;
-  color: #4b5563;
-  margin-bottom: 0.85rem;
-  font-weight: 500;
-}
-
-.home-summary {
-  color: #4b5563;
-  font-size: 0.98rem;
-  line-height: 1.6;
-  margin-bottom: 1.5rem;
-}
-
-.home-actions .btn {
-  display: inline-block;
-  margin: 0.25rem 0.45rem;
-}
-
-/* Buttons */
-.btn {
-  padding: 0.6rem 1.4rem;
-  border-radius: 999px;
-  border: 1px solid #d0d4e4;
-  font-size: 0.9rem;
-  text-decoration: none;
-  transition: background 0.18s ease, color 0.18s ease, box-shadow 0.18s ease, transform 0.18s ease;
-}
-
-.btn--primary {
-  background: var(--home-accent);
-  border-color: var(--home-accent);
-  color: #fff !important;
-}
-
-.btn--primary:hover {
-  box-shadow: 0 8px 18px rgba(37, 99, 235, 0.35);
-  transform: translateY(-1px);
-}
-
-.btn:hover {
-  background: #f3f4ff;
-}
-
-/* GRID & CARDS */
-.home-grid {
-  display: grid;
-  gap: 1.6rem;
-  margin: 1.2rem 0 0 0;
-}
-
-.home-grid--three {
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-}
-
-.home-grid--two {
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-}
-
-.home-card {
-  position: relative;
-  border-radius: var(--home-radius-md);
-  border: 1px solid var(--home-border);
-  padding: 1.3rem 1.4rem;
-  background: #ffffff;
-  box-shadow: var(--home-shadow-card);
-  overflow: hidden;
-  transition: transform 0.18s ease, box-shadow 0.18s ease, border-color 0.18s ease, background 0.18s ease;
-}
-
-.home-card::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.18s ease;
-}
-
-.home-card h3 {
-  margin-top: 0;
-  margin-bottom: 0.45rem;
-  font-size: 1.06rem;
-}
-
-.home-card-sub {
-  font-weight: 400;
-  font-size: 0.86rem;
-  color: var(--home-text-muted);
-}
-
-.home-card p {
-</style>
+<p>&lt;div cla</p>
 
         
       </section>
