deploy: 27af5de97767751345ce0b0c9b09aa9e0b32e06f

--- a/index.html
+++ b/index.html
@@ -163,153 +163,12 @@
   <p class="home-kicker">Machine Learning &amp; Data Science Portfolio</p>
   <h1 class="home-name">Gonzalo Loayza</h1>
   <p class="home-tagline">
-    Machine Learning Engineer &mdash; Industrial Time-Series &amp; Predictive Analytics
+    Machine Learning Engineer &mdash; Data-Centric Modeling &amp; Applied Analytics
   </p>
   <p class="home-summary">
     I design and build data-centric ML systems, working with large datasets, time-series signals,
-    and complex real-world problems. I enjoy turning messy data into clear, reliable pipelines that
-    support modeling, analytics, and intelligent automation.
-  </p>
-  <div class="home-actions">
-    <a class="btn btn--primary" href="/projects/">View Projects</a>
-    <a class="btn" href="/resume/">Resume</a>
-    <a class="btn" href="https://github.com/Gonza2055" target="_blank" rel="noopener">GitHub</a>
-  </div>
-</div>
-
-<hr />
-
-<h2 id="about">About</h2>
-
-<p>I’m a senior Computer Science student at Brigham Young University (BYU) specializing in machine learning for industrial and engineering applications.<br />
-My work focuses on designing <strong>data-centric ML pipelines</strong> for large-scale time-series, simulation outputs, and operational datasets found in mining, rail systems, and heavy industry.</p>
-
-<p>I work at the intersection of <strong>predictive maintenance</strong>, <strong>reliability analytics</strong>, and <strong>software engineering</strong>, building reproducible workflows that transform complex datasets into structured insights.<br />
-I care about clarity, robustness, and engineering precision in every stage of the ML lifecycle.</p>
-
-<hr />
-
-<h2 id="experience">Experience</h2>
-
-<div class="two-column two-column--stack">
-
-  <div class="exp-item">
-    <h3 class="exp-title">Maintenance Data Analyst Intern</h3>
-    <p class="exp-meta">Compañía de Minas Buenaventura &middot; 2025</p>
-    <p>
-      Processed and analyzed 50k+ high-noise industrial sensor time-series from crushing and grinding systems.
-      Built reproducible pipelines for smoothing, outlier capping, and signal reconstruction, and engineered
-      reliability-focused features used for early-warning indicators and predictive-maintenance prototyping.
-      Structured 100+ assets under ISO&nbsp;14224/17359 to improve traceability and maintenance workflows.
-    </p>
-  </div>
-
-  <div class="exp-item">
-    <h3 class="exp-title">Data Analytics Intern</h3>
-    <p class="exp-meta">Hatch Ltd (Urban Solutions, USA) &middot; 2024</p>
-    <p>
-      Developed C++ and Python automation utilities to parse and structure 200k+ rail-simulation records,
-      reducing processing time by ~70%. Integrated rider-survey responses with onboard sensor logs to validate
-      operational scenarios and analyze network performance for planning teams.
-    </p>
-  </div>
-
-</div>
-
-<div class="exp-item exp-item--single">
-  <h3 class="exp-title">Honors Thesis Researcher</h3>
-  <p class="exp-meta">BYU Honors Program &middot; 2025–2026</p>
-  <p>
-    Designing an unsupervised-learning framework to discover operating modes in mineral-processing circuits
-    using clustering, dimensionality reduction, and statistical validation. The project supports reliability
-    monitoring and detection of suboptimal operating states in real industrial environments.
-  </p>
-</div>
-
-<hr />
-
-<h2 id="technical-focus">Technical Focus</h2>
-
-<div class="three-column">
-
-  <div class="focus-block">
-    <h3>Machine Learning &amp; Data</h3>
-    <ul>
-      <li>Time-series modeling and anomaly detection</li>
-      <li>Predictive-maintenance workflows</li>
-      <li>Reliability feature engineering (deltas, ratios, transients)</li>
-      <li>Noise reduction, smoothing, reconstruction</li>
-      <li>Model evaluation and statistical validation</li>
-    </ul>
-  </div>
-
-  <div class="focus-block">
-    <h3>Software Engineering</h3>
-    <ul>
-      <li>Python, C++, SQL, JavaScript</li>
-      <li>Large-scale data wrangling and automation</li>
-      <li>Clean, reproducible workflow design</li>
-      <li>Jupyter, Git, Linux</li>
-    </ul>
-  </div>
-
-  <div class="focus-block">
-    <h3>Domains</h3>
-    <ul>
-      <li>Industrial sensor data (vibration, load, pressure, temperature)</li>
-      <li>Rail-simulation outputs and operational logs</li>
-      <li>Mining, reliability engineering, and heavy-industry analytics</li>
-    </ul>
-  </div>
-
-</div>
-
-<hr />
-
-<h2 id="selected-projects">Selected Projects</h2>
-
-<div class="project-list">
-
-  <div class="project-item">
-    <h3 class="project-title">Predictive Maintenance &mdash; Sensor Data Conditioning (2025)</h3>
-    <p>
-      Built end-to-end preprocessing workflows for 50k+ industrial time-series, implementing noise reduction,
-      outlier handling, and signal reconstruction. Created reliability-focused feature sets for downstream ML
-      failure prediction and maintenance analytics.
-    </p>
-    <p class="project-link"><a href="/projects/">See more details →</a></p>
-  </div>
-
-  <div class="project-item">
-    <h3 class="project-title">TrainOps Simulation Data Optimization (2024)</h3>
-    <p>
-      Developed C++ and Python tooling to structure 200k+ simulation records, cutting manual processing time
-      by ~70%. Merged sensor data with rider-survey logs to validate scenario fidelity and improve planning
-      insights.
-    </p>
-    <p class="project-link"><a href="/projects/">See more details →</a></p>
-  </div>
-
-  <div class="project-item">
-    <h3 class="project-title">ML Failure-Mode Prototyping (2024–2025)</h3>
-    <p>
-      Exploratory ML pipeline inspired by industrial maintenance settings, including EDA, feature engineering,
-      and baseline models (Random Forest, SVM, Gradient Boosting) to detect early abnormal behavior in equipment.
-    </p>
-    <p class="project-link"><a href="/projects/">See more details →</a></p>
-  </div>
-
-</div>
-
-<hr />
-
-<h2 id="contact">Contact</h2>
-
-<p>If you’d like to talk about internships, ML systems, or industrial data projects, you can reach me via:</p>
-
-<ul>
-  <li><strong>Email:</strong> gloayza5@b</li>
-</ul>
+    and complex real-world problems.
+</p></div>
 
         
       </section>
